# nvidia-nemotron-reasoning

./: .gitignore  .wakatime-project  CONTRIBUTING.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
configs/: base.yaml  eval.yaml  full_run.yaml  reasoning_v1.yaml  train.yaml
data/: train.csv
docs/: commit_2026-03-18_1.md  commit_2026-03-18_10.md  commit_2026-03-18_11.md  commit_2026-03-18_12.md  commit_2026-03-18_13.md  commit_2026-03-18_14.md  commit_2026-03-18_15.md  commit_2026-03-18_16.md  commit_2026-03-18_17.md  commit_2026-03-18_18.md  commit_2026-03-18_19.md  commit_2026-03-18_2.md  commit_2026-03-18_20.md  commit_2026-03-18_3.md  commit_2026-03-18_4.md  commit_2026-03-18_5.md  commit_2026-03-18_6.md  commit_2026-03-18_7.md  commit_2026-03-18_8.md  commit_2026-03-18_9.md  novel_benchmark.md  overview.md  structure.md  winning_strategy.md
docs/kaggle/: data.md  overview.md  resources.md
experiments/: README.md
experiments/exp_001_baseline/: config.yaml  notes.md
experiments/exp_002_cot/: README.md
experiments/exp_003_tot/: README.md
notebooks/: kaggle_writeup.ipynb
reports/: findings.md  leaderboard.csv  leaderboard.md
scripts/: __init__.py  elite_pipeline.py  evaluate.py  full_run.py  prepare_data.py  run_experiment.py  run_full_pipeline.py  run_pipeline.py  train.py  train_lora.py  train_lora_advanced.py
src/: .wakatime-project  __init__.py  eval.py
src/data/: cleaning.py  loader.py  preprocessing.py  synthetic.py
src/evaluation/: benchmark.py  leaderboard.py  metrics.py
src/models/: api_models.py  inference.py  (+3 more)
(+9 files in other folders)
