[tool.poetry]
name = "nvidia-nemotron-reasoning"
version = "0.1.0"
description = "Experiments and reproducible recipes for the NVIDIA Nemotron reasoning benchmark"
authors = ["Hardik Sankhla <datascientist.hardiksankhla@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "*"
pandas = "*"
pyyaml = "*"
torch = "*"
transformers = "*"
accelerate = "*"
datasets = "*"
vllm = "*"
peft = "*"
trl = "*"
streamlit = "*"
matplotlib = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
